fixed bug gap when user zoom out/in

--- a/src/components/ImageViewer/ImageViewerCSS.module.css
+++ b/src/components/ImageViewer/ImageViewerCSS.module.css
@@ -61,10 +61,12 @@
 }
 
 .buttonsContainer {
-  /* background: red; */ /* DEV */
+  /* background: lightblue; */ /* DEV */
   display: flex;
   position: relative;
   flex-direction: row;
+  width: 546px;
+  /* width: 696px; */
 }
 
 .imageViewerForeground {
@@ -77,23 +79,30 @@
 }
 
 .imageCounter {
-  /* background: blue; */ /* DEV */
+  background: blue; /* DEV */
   width: 70px;
+  /* width: 75px; */
   align-items: center;
   display: flex;
   position: absolute;
+  /* position: relative; */
   left: -75px;
+  /* margin-right: 5px; */
+  /* padding-right: 5px; */
   color: #fff;
   height: 49px;
   justify-content: flex-end;
 }
 
 .zoomContainer {
-  /* background: blue; */ /* DEV */
+  background: blue; /* DEV */
   width: 70px;
   align-items: center;
   display: flex;
   position: absolute;
+  /* position: relative; */
+  /* margin-left: 5px; */
+  /* padding-left: 5px; */
   right: -75px;
   color: #fff;
   height: 49px;
@@ -166,11 +175,17 @@
 }
 
 .buttonOutline {
+  /* background: lightblue; */ /* DEV */
   display: flex;
   position: absolute;
   height: 42px;
   margin-top: 3.5px;
-  left: 252px;
+  /* left: 252px; */
+  left: 0px;
+  /* top: 0px; */
+  /* z-index: -2; */
+  /* width: 200px; */
+  width: 600px;
 }
 
 .fade {
@@ -395,4 +410,13 @@
   height: 75px;
   margin-left: 12px;
   /* background: red; */ /* DEV */
+}
+
+
+
+@media screen
+and (width < 697px) {
+  .bottomBar {
+    height: 98px;
+  }
 }
